# configurator

./: .gitignore  .pre-commit-config.yaml  .prettierrc.toml  .yamllint  LICENSE  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.github/: renovate.json5
.github/workflows/: lint-test.yaml
src/: __init__.py  post_tools.py  pre_tools.py
tests/: expected_pylint.txt  test_pre_commit.py  test_tool_corrections.py
