[build-system]
build-backend = "setuptools.build_meta"
# SEE: https://github.com/pypa/setuptools_scm#pyprojecttoml-usage
requires = ["setuptools>=64", "setuptools_scm>=8"]

[dependency-groups]
dev = ["configurator[dev]"]

[project]
authors = [
    {name = "James Braza"},
]
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
dynamic = [
    "version",  # Required for setuptools_scm
]
keywords = ["configuration", "quality assurance", "tooling"]
license = {file = "LICENSE"}
name = "configurator"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "Flake8-pyproject>=1.2",  # For added --toml-config arg
    "coverage[toml]",
    "flake8-requirements",
    "ipython>=8",  # Pin to keep recent
    "mypy>=1.8",  # For addition of mutable-override
    "pre-commit>=3.4",
    "pylint>=3",
    "pytest",
    "pytest-subtests",
    "pytest-sugar",
    "pytest-timer[colorama]",
    "pytest-xdist",
    "refurb>=2",
    "typeguard",
]

[project.urls]
issues = "https://github.com/jamesbraza/configurator/issues"
repository = "https://github.com/jamesbraza/configurator"

[tool.black]
enable-unstable-feature = [
    "hug_parens_with_braces_and_square_brackets",  # TODO: remove after https://github.com/psf/black/issues/4036 resolution
]
preview = true

[tool.codespell]
check-filenames = true
check-hidden = true
ignore-words-list = "astroid,ser"

[tool.coverage]

[tool.coverage.report]
exclude_also = [
    "@overload",  # SEE: https://github.com/nedbat/coveragepy/issues/970
    "if TYPE_CHECKING:",
]
# Number of digits after the decimal point to display for reported coverage percentages
precision = 2

[tool.coverage.run]
# Measure branch coverage
branch = true
# This will be used if you run `coverage run` with no further arguments
# This is designed to be invoked from within the test directory
command_line = "-m pytest"

[tool.docformatter]
black = true
in-place = true
pre-summary-newline = true

[tool.flake8]
allow-init-docstring = true
arg-type-hints-in-docstring = false
check-return-types = false
# Specify a list of codes to add to the list of ignored ones. Similar
# considerations as in --ignore apply here with regard to the value.
# The difference to the --ignore option is, that this option can be used to
# selectively add individual codes without overriding the default list entirely.
extend-ignore = [
    "E203",  # SEE: https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
    "E501",  # SEE: https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
    "E704",  # SEE: https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#flake8
]
# Specify a list of codes to ignore. The list is expected to be
# comma-separated, and does not need to specify an error code exactly.
ignore = [
    "C901",  # Duplicates ruff C901
    "E302",  # Let black manage blank lines
    "F401",  # Duplicates ruff F401
    "W503",  # Goes against PEP8 line break before binary operator
]
# Set the maximum length that any line (with some exceptions) may be.
max-line-length = 97  # Match ruff line-length
style = "google"

[tool.mypy]
# Type-checks the interior of functions without type annotations.
check_untyped_defs = true
# Allows enabling one or multiple error codes globally. Note: This option will
# override disabled error codes from the disable_error_code option.
enable_error_code = [
    "ignore-without-code",
    "mutable-override",
    "redundant-cast",
    "redundant-expr",
    "redundant-self",
    "truthy-bool",
    "truthy-iterable",
    "unimported-reveal",
    "unreachable",
    "unused-awaitable",
    "unused-ignore",
]
# Shows a short summary line after error messages.
error_summary = false
# A regular expression that matches file names, directory names and paths which mypy
# should ignore while recursively discovering files to check. Use forward slashes (/) as
# directory separators on all platforms.
exclude = [
    "^\\.?venv",  # SEE: https://regex101.com/r/0rp5Br/1
]
# Use visually nicer output in error messages: use soft word wrap, show source
# code snippets, and show error location markers.
pretty = true
# Shows column numbers in error messages.
show_column_numbers = true
# Shows error codes in error messages.
# SEE: https://mypy.readthedocs.io/en/stable/error_codes.html#error-codes
show_error_codes = true
# Prefixes each error with the relevant context.
show_error_context = true
# Warns about casting an expression to its inferred type.
warn_redundant_casts = true
# Shows a warning when encountering any code inferred to be unreachable or
# redundant after performing type analysis.
warn_unreachable = true
# Warns about per-module sections in the config file that do not match any
# files processed when invoking mypy.
warn_unused_configs = true
# Warns about unneeded `# type: ignore` comments.
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Suppresses error messages about imports that cannot be resolved.
ignore_missing_imports = true
# Per-module configuration options
module = [
    "PIL",
    "accelerate.*",  # SEE: https://github.com/huggingface/accelerate/issues/2396
    "colabfold.*",
    "datasets",  # SEE: https://github.com/huggingface/datasets/issues/3841
    "dicttoxml",  # SEE: https://github.com/quandyfactory/dicttoxml/issues/106
    "dill",
    "docker",  # SEE: https://github.com/docker/docker-py/issues/2796
    "factory",  # SEE: https://github.com/FactoryBoy/factory_boy/issues/468
    "fastapi_socketio",  # SEE: https://github.com/pyropy/fastapi-socketio/issues/27
    "fsspec",  # SEE: https://github.com/fsspec/filesystem_spec/issues/625
    "google.cloud.storage",  # SEE: https://github.com/googleapis/python-storage/issues/393
    "google_crc32c",  # SEE: https://github.com/googleapis/python-crc32c/pull/211
    "huggingface_hub.*",  # SEE: https://github.com/huggingface/huggingface_hub/issues/1662
    "jsonschema.*",
    "litellm",  # SEE: https://github.com/BerriAI/litellm/issues/825
    "networkx",  # SEE: https://github.com/networkx/networkx/issues/3988
    "pybtex.*",  # SEE: https://bitbucket.org/pybtex-devs/pybtex/issues/141/type-annotations
    "pymupdf",  # SEE: https://github.com/pymupdf/PyMuPDF/issues/3361
    "pyzotero",  # SEE: https://github.com/urschrei/pyzotero/issues/110
    "s3fs",  # SEE: https://github.com/fsspec/s3fs/issues/383
    "setuptools_scm",  # SEE: https://github.com/pypa/setuptools_scm/issues/501
    "socketio.*",  # SEE: https://github.com/miguelgrinberg/python-socketio/issues/1276
    "sweagent.*",
    "swebench.*",
    "tokenizers",
    "transformers.*",  # SEE: https://github.com/huggingface/transformers/pull/18485
    "trl.*",
    "unsloth",
    "vcr",  # SEE: https://github.com/kevin1024/vcrpy/issues/780
]

[tool.pylint]

[tool.pylint.design]
# Maximum number of attributes for a class (see R0902).
max-attributes = 12

[tool.pylint.format]
# Maximum number of characters on a single line.
max-line-length = 97  # Match ruff line-length

[tool.pylint.main]
# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use, and will cap the count on Windows to
# avoid hangs.
jobs = 0

[tool.pylint.messages_control]
# Disable the message, report, category or checker with the given id(s).
disable = [
    "bare-except",  # Rely on ruff E722 for this
    "broad-exception-raised",  # Rely on ruff TRY002 for this
    "empty-docstring",  # Let pep257 take care of docstrings
    "expression-not-assigned",  # Rely on mypy func-returns-value for this
    "fixme",  # codetags are useful
    "function-redefined",  # Rely on mypy no-redef for this
    "import-outside-toplevel",  # Rely on ruff PLC0415 for this
    "line-too-long",  # Rely on ruff E501 for this
    "logging-fstring-interpolation",  # f-strings are convenient
    "logging-too-many-args",  # Rely on ruff PLE1205 for this
    "missing-docstring",  # Let docformatter and ruff take care of docstrings
    "missing-final-newline",  # Rely on ruff W292 for this
    "no-else-return",  # Rely on ruff RET506 for this
    "no-member",  # Buggy, SEE: https://github.com/pylint-dev/pylint/issues/8138
    "protected-access",  # Don't care to enforce this in testing
    "raise-missing-from",  # Rely on ruff B904 for this
    "redefined-builtin",  # Rely on ruff A002 for this
    "too-few-public-methods",  # Don't care to enforce this
    "too-many-arguments",  # Don't care to enforce this
    "too-many-branches",  # Rely on ruff PLR0912 for this
    "too-many-locals",  # Rely on ruff PLR0914 for this
    "too-many-return-statements",  # Rely on ruff PLR0911 for this
    "too-many-statements",  # Rely on ruff PLR0915 for this
    "ungrouped-imports",  # Rely on ruff I001 for this
    "unidiomatic-typecheck",  # Rely on ruff E721 for this
    "unreachable",  # Rely on mypy unreachable for this
    "unsubscriptable-object",  # Buggy, SEE: https://github.com/pylint-dev/pylint/issues/3637
    "unsupported-membership-test",  # Buggy, SEE: https://github.com/pylint-dev/pylint/issues/3045
    "unused-argument",  # Rely on ruff ARG002 for this
    "unused-import",  # Rely on ruff F401 for this
    "unused-variable",  # Rely on ruff F841 for this
    "unused-wildcard-import",  # Wildcard imports are convenient
    "wildcard-import",  # Wildcard imports are convenient
    "wrong-import-order",  # Rely on ruff I001 for this
    "wrong-import-position",  # Rely on ruff E402 for this
]
# Enable the message, report, category or checker with the given id(s).
enable = [
    "useless-suppression",  # Print unused `pylint: disable` comments
]

[tool.pylint.reports]
# Set true to activate the evaluation score.
score = false

[tool.pylint.similarities]
# Minimum lines number of a similarity.
min-similarity-lines = 10

[tool.pytest.ini_options]
# Add the specified `OPTS` to the set of command line arguments as if they had
# been specified by the user.
addopts = "--typeguard-packages=configurator --doctest-modules"

[tool.refurb]
enable_all = true
ignore = [
    "FURB101",  # Rely on ruff FURB101 for this
    "FURB103",  # Rely on ruff FURB103 for this
    "FURB141",  # Rely on ruff PTH110 for this
    "FURB144",  # Rely on ruff PTH107 for this
    "FURB146",  # Rely on ruff PTH113 for this
    "FURB147",  # Rely on ruff PTH118 for this
    "FURB150",  # Rely on ruff PTH102 for this
    "FURB155",  # Rely on ruff PTH202 for this
]

[tool.ruff]
# Line length to use when enforcing long-lines violations (like `E501`).
line-length = 97  # ceil(1.1 * 88) makes `E501` equivalent to `B950`
# Enable application of unsafe fixes.
unsafe-fixes = true

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true
# Enable preview style formatting.
preview = true

[tool.ruff.lint]
explicit-preview-rules = true
extend-select = [
    "C420",
    "DOC202",
    "DOC403",
    "FURB110",
    "FURB113",
    "FURB116",
    "FURB118",
    "FURB131",
    "FURB132",
    "FURB140",
    "FURB142",
    "FURB145",
    "FURB148",
    "FURB152",
    "FURB154",
    "FURB157",
    "FURB164",
    "FURB166",
    "FURB171",
    "FURB180",
    "FURB192",
    "PLR6104",
    "PLR6201",
    "PLW0108",
    "RUF022",
]
external = [
    "DOC501",  # pydoclint
    "FURB",  # refurb
]
ignore = [
    "ANN",  # Don't care to enforce typing
    "BLE001",  # Don't care to enforce blind exception catching
    "COM812",  # Trailing comma with black leads to wasting lines
    "D100",  # D100, D101, D102, D103, D104, D105, D106, D107: don't always need docstrings
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",  # Keep docstring next to the class definition (covered by D211)
    "D212",  # Summary should be on second line (opposite of D213)
    "D402",  # It's nice to reuse the method name
    "D406",  # Google style requires ":" at end
    "D407",  # We aren't using numpy style
    "D413",  # Blank line after last section. -> No blank line
    "DTZ",  # Don't care to have timezone safety
    "EM",  # Overly pedantic
    "FBT001",  # FBT001, FBT002: overly pedantic
    "FBT002",
    "FIX",  # Don't care to prevent TODO, FIXME, etc.
    "G004",  # f-strings are convenient
    "INP001",  # Can use namespace packages
    "ISC001",  # For ruff format compatibility
    "PTH",  # Overly pedantic
    "SLF001",  # Overly pedantic
    "T201",  # Overly pedantic
    "TCH001",  # TCH001, TCH002, TCH003: don't care to enforce type checking blocks
    "TCH002",
    "TCH003",
    "TD002",  # Don't care for TODO author
    "TD003",  # Don't care for TODO links
    "TRY003",  # Overly pedantic
]
preview = true
select = ["ALL"]
unfixable = [
    "B007",  # While debugging, unused loop variables can be useful
    "B905",  # Default fix is zip(strict=False), but that can hide bugs
    "ERA001",  # While debugging, temporarily commenting code can be useful
    "F401",  # While debugging, unused imports can be useful
    "F841",  # While debugging, unused locals can be useful
    "TCH004",  # While debugging, it can be nice to keep TYPE_CHECKING in-tact
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = [
    "N802",  # Tests function names can match class names
    "PLR2004",  # Tests can have magic values
    "S101",  # Tests can have assertions
]

[tool.ruff.lint.pycodestyle]
# The maximum line length to allow for line-length violations within
# documentation (W505), including standalone comments.
max-doc-length = 97  # Match line-length

[tool.ruff.lint.pydocstyle]
# Whether to use Google-style or NumPy-style conventions or the PEP257
# defaults when analyzing docstring sections.
convention = "google"

[tool.sqlfluff.core]
max_line_length = 88  # Match black

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
